[gd_scene format=3 uid="uid://bnhiv8qcc5ro5"]

[ext_resource type="Script" uid="uid://c5ju0fqtma84j" path="res://script/character/player/player.gd" id="1_oh5ij"]
[ext_resource type="SpriteFrames" uid="uid://d1ty1kvcda0e0" path="res://tres/player_default_skin.tres" id="2_dkc8g"]
[ext_resource type="Script" uid="uid://dwbl7tap1c6fd" path="res://script/character/state_machine.gd" id="7_hp4bs"]
[ext_resource type="Script" uid="uid://cc05811yg1aj1" path="res://script/character/player/idle_state.gd" id="8_g2vtq"]
[ext_resource type="Script" uid="uid://douuaq6s5itp7" path="res://script/character/player/walk_state.gd" id="9_2fvbb"]
[ext_resource type="Script" uid="uid://6egxn1ugbpkr" path="res://script/character/player/jump_state.gd" id="10_ml7e8"]
[ext_resource type="Script" uid="uid://b1bmmbgi7o24b" path="res://script/character/player/falling_state.gd" id="24_k8m7u"]
[ext_resource type="Script" uid="uid://bjktsqrbbs65u" path="res://script/character/player/damaged_state.gd" id="24_ov0iu"]
[ext_resource type="Script" uid="uid://fs7oqtutiod4" path="res://script/character/player/pause_state.gd" id="29_du2bl"]
[ext_resource type="Script" uid="uid://bxt2uug3lcixy" path="res://scene/character/hit_box.gd" id="30_dspxq"]
[ext_resource type="Script" uid="uid://dlgrkpgwlookw" path="res://script/character/player/attacking_state.gd" id="31_r5eyx"]
[ext_resource type="Script" uid="uid://b7ps7d3m653fo" path="res://script/character/player/dead_state.gd" id="43_qe7ey"]
[ext_resource type="Script" uid="uid://dqcm3la8w1hfw" path="res://script/character/player/air_attack_state.gd" id="45_m1pvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q48bb"]
size = Vector2(22, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4jxa"]
size = Vector2(26, 25)

[node name="Player" type="CharacterBody2D" unique_id=880234569 groups=["player"]]
collision_mask = 18
script = ExtResource("1_oh5ij")
speed = 200.0
air_speed = 200.0

[node name="Visuals" type="Node2D" parent="." unique_id=610452419]
position = Vector2(1, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals" unique_id=1189302188]
position = Vector2(9, -5)
sprite_frames = ExtResource("2_dkc8g")
animation = &"air_attacking"
autoplay = "idle"

[node name="HurtBox" type="CollisionShape2D" parent="." unique_id=1987827586]
position = Vector2(-1, -2.5)
shape = SubResource("RectangleShape2D_q48bb")

[node name="HitBox" type="Area2D" parent="." unique_id=1830820937 groups=["enemy"]]
collision_layer = 8
collision_mask = 16
script = ExtResource("30_dspxq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=1486138082]
position = Vector2(23, -0.5)
shape = SubResource("RectangleShape2D_s4jxa")

[node name="StateMachine" type="Node" parent="." unique_id=1998528331 node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_hp4bs")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" unique_id=2118042169]
script = ExtResource("8_g2vtq")

[node name="WalkState" type="Node" parent="StateMachine" unique_id=854692855]
script = ExtResource("9_2fvbb")

[node name="JumpState" type="Node" parent="StateMachine" unique_id=1716535809]
script = ExtResource("10_ml7e8")

[node name="FallingState" type="Node" parent="StateMachine" unique_id=1971783647]
script = ExtResource("24_k8m7u")

[node name="DamagedState" type="Node" parent="StateMachine" unique_id=198808539]
script = ExtResource("24_ov0iu")

[node name="PauseState" type="Node" parent="StateMachine" unique_id=247384038]
script = ExtResource("29_du2bl")

[node name="AirAttackState" type="Node" parent="StateMachine" unique_id=1808622118]
script = ExtResource("45_m1pvm")

[node name="AttackingState" type="Node" parent="StateMachine" unique_id=571242427]
script = ExtResource("31_r5eyx")

[node name="DeadState" type="Node" parent="StateMachine" unique_id=2115785052]
script = ExtResource("43_qe7ey")

[node name="Timer" type="Timer" parent="StateMachine/DeadState" unique_id=1236647262]

[connection signal="animation_finished" from="Visuals/AnimatedSprite2D" to="StateMachine/DamagedState" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_body_entered"]
[connection signal="timeout" from="StateMachine/DeadState/Timer" to="StateMachine/DeadState" method="_on_timer_timeout"]
